# Miss

./: .gitignore  docker-compose.dev.yml  docker-compose.yml  nginx.conf
.github/workflows/: ci.yml  main.yml
backend/: Dockerfile  database.py  main.py  pyproject.toml
backend/api/: auth.py
backend/core/: security.py
backend/migrations/: env.py
backend/migrations/versions/: 1cc5ed63e82e_add_all_models.py
backend/models/: __init__.py  base.py  chat.py  message.py  user.py
backend/repositories/: user_repo.py
backend/schemas/: user.py
frontend/: Dockerfile  nuxt.config.ts  package-lock.json  package.json
frontend/app/: app.vue
frontend/app/assets/scss/: _null.scss  _vars.scss  main.scss
frontend/app/layouts/: default.vue
frontend/app/middleware/: auth.global.ts
frontend/app/pages/auth/: index.vue  register.vue
frontend/app/stores/: auth.ts
